Bug 1151760 - Separate timeout timer with end of stream. r=ettseng